FIX Hero Section on Mobile -change margin rem to % to let it show properly on mobile

--- a/huddle-landing-page-with-alternating-feature-blocks-master/style.css
+++ b/huddle-landing-page-with-alternating-feature-blocks-master/style.css
@@ -123,7 +123,7 @@ li:hover {
     height: 4.5rem;
     width: 70%;
     margin: 0 auto;
-    margin-bottom: 5rem;
+    margin-bottom: 10%;
     transition: 0.3s ease all;
 }
 
